Fixed home's layout Fixed link card's title when too long

--- a/design-ui/src/pages/index.html
+++ b/design-ui/src/pages/index.html
@@ -6,7 +6,7 @@
 ##include('../partials/navigation/breadcrumbs.html')
 
 
-<div class="container-fluid d-flex mx-2">
+<div class="container d-flex">
     <main id="link-cards" class="flex-grow-1 me-4 flex-row">
         ##include('../partials/links/link-cards.html')
         <div id="pager-container" data-pageno="1" data-size="50" data-pages="100" data-results="5000" data-url="/links"></div>
